tests/error/type_match/base_case_const_to_non_const_auto_ref.bz
// error: unable to match lvalue expression of type 'int32' to a mutable auto reference '#mut int32'
function test()
{
	let ci: int32 = 0;
	let _: #mut int32 = ci;
}
